Fix language switching: correct button IDs and styling for settings page

--- a/settings.html
+++ b/settings.html
@@ -102,9 +102,9 @@
                      <div class="space-y-4">
                          <p class="settings-description text-sm" data-i18n="settings.language.description"></p>
                          <div class="flex space-x-4">
-                             <button id="langIT" onclick="changeLanguage('it')" class="px-4 py-2 rounded-lg bg-green-600 text-white transition-colors hover:bg-green-700" data-i18n="settings.language.italian">
+                             <button id="lang-it" onclick="changeLanguage('it')" class="px-4 py-2 rounded-lg text-white transition-colors hover:bg-green-700" data-i18n="settings.language.italian">
                               </button>
-                              <button id="langEN" onclick="changeLanguage('en')" class="px-4 py-2 rounded-lg bg-gray-600 text-white hover:bg-gray-700 transition-colors" data-i18n="settings.language.english">
+                              <button id="lang-en" onclick="changeLanguage('en')" class="px-4 py-2 rounded-lg text-white hover:bg-gray-700 transition-colors" data-i18n="settings.language.english">
                               </button>
                          </div>
                      </div>
