Fix missing i18n translations for certificates page search section

--- a/certificates.html
+++ b/certificates.html
@@ -402,8 +402,8 @@
                                 </svg>
                             </div>
                             <div>
-                                <h3 class="text-gray-900 dark:text-white font-semibold text-sm">Ricerca e Filtri</h3>
-                                <p class="text-gray-700 dark:text-gray-400 text-xs">Trova certificati usando diversi criteri</p>
+                                <h3 class="text-gray-900 dark:text-white font-semibold text-sm" data-i18n="certificates.search.title">Ricerca e Filtri</h3>
+                                <p class="text-gray-700 dark:text-gray-400 text-xs" data-i18n="certificates.search.description">Trova certificati usando diversi criteri</p>
                             </div>
                         </div>
                         
@@ -465,7 +465,7 @@
                         <!-- Left Side - View Controls -->
                         <div class="flex items-center gap-4">
                             <div class="flex items-center gap-2">
-                                <span class="text-sm font-medium text-gray-800 dark:text-gray-300">Visualizza:</span>
+                                <span class="text-sm font-medium text-gray-800 dark:text-gray-300" data-i18n="certificates.view.label">Visualizza:</span>
                                 <div class="flex bg-gray-300/60 dark:bg-gray-700/50 rounded-lg p-1 border border-gray-400/40 dark:border-gray-600/50">
                                     <button id="cardsViewBtn" onclick="showCardView()" class="px-4 py-2 rounded-md text-sm font-medium transition-all duration-200 flex items-center gap-2 bg-emerald-500 dark:bg-emerald-600 text-white shadow-md" style="color: white !important;">
                                         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -534,7 +534,7 @@
                                     </svg>
                                 </div>
                                 <div>
-                                    <p class="text-xs text-gray-600 dark:text-gray-300">Certificati Attivi</p>
+                                    <p class="text-xs text-gray-600 dark:text-gray-300" data-i18n="certificates.active.title">Certificati Attivi</p>
                                     <p class="text-gray-800 dark:text-white font-semibold" id="certificateCount">Loading...</p>
                                 </div>
                             </div>
