billing(api): rendi /api/billing/balance tollerante (no single, ordina per updated_at, fallback 0)

--- a/settings.html
+++ b/settings.html
@@ -68,6 +68,16 @@
                     </svg>
                 </button>
                  <div class="sidebar-tooltip absolute left-full ml-2 px-2 py-1 text-sm rounded opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none whitespace-nowrap z-60" data-i18n="nav.certificates"></div>
+                 </div>
+
+            <!-- Billing / Credit -->
+            <div class="relative group mt-2">
+                <button onclick="window.location.href='/billing.html'" class="sidebar-nav-item w-full p-3 flex justify-center rounded-lg transition-colors">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M5 6h14a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2zm4 10h.01M8 14h8" />
+                    </svg>
+                </button>
+                <div class="sidebar-tooltip absolute left-full ml-2 px-2 py-1 text-sm rounded opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none whitespace-nowrap z-60" data-i18n="nav.billing"></div>
             </div>
             
             <!-- Settings (Active) -->
